# tmp

./: .dockerignore  .gitignore  Dockerfile.web  Makefile  README.ci.md  README.docker.md  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  SETUP_ACTIONS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  docker-publish.yml
apps/backend/: README.md  main.py  project.json  pyproject.toml
apps/backend/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/backend/api/src/app/: main.py
apps/backend/api/src/app/api/: __init__.py
apps/backend/api/src/app/api/v1/: router.py
apps/backend/api/src/app/api/v1/endpoints/: db_test.py  health.py
apps/backend/api/src/app/core/: __init__.py  config.py  logging.py
apps/backend/api/src/app/db/: __init__.py  mongodb.py  session.py
apps/backend/api/src/app/models/: __init__.py  example.py
apps/backend/api/src/app/services/: __init__.py  example.py
apps/backend/api/tests/: test_health.py
apps/frontend/: project.json  vite.config.mts
apps/frontend-e2e/: README.md  project.json
apps/frontend-e2e/src/: example.spec.ts
apps/frontend/src/app/: app-module.ts  nx-welcome.ts
libs/api-client/: jest.config.ts  project.json
libs/api-client/src/: index.ts
libs/domain/: jest.config.ts  project.json
libs/domain/src/: index.ts
libs/ui/: jest.config.ts  ng-package.json  package.json  project.json  tsconfig.lib.json
libs/ui/src/: index.ts
(+1 files in other folders)
